--- a/style.css
+++ b/style.css
@@ -5,3 +5,24 @@
     --burnt-orange: #C44900;
     --midnight-violet: #432534;
 }
+
+/* Normalize page */
+html, body{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: var(--ink-black);
+    color: white;
+}
+
+/* Header Styles */
+header{
+    width: 70%;
+    margin: 40px auto;
+}
+
+header h1{
+    margin: 0;
+}
