--- a/style.css
+++ b/style.css
@@ -59,3 +59,34 @@ header h1{
     display: block;
     aspect-ratio: 1/1;
 }
+
+/* Dialog styles */
+dialog::backdrop{
+    background-color: rgba(0,0,0,0.5);
+}
+
+dialog{
+    min-width: 420px;
+    border: none;
+}
+
+.modal-header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-header h2{
+    margin:0;
+}
+
+.modal-header .close-modal-btn{
+    display: block;
+    font-size: 24px;
+    background-color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.modal-header .close-modal-btn:hover{
+    color: darkred;
+}
