--- a/style.css
+++ b/style.css
@@ -179,4 +179,10 @@ form input[type='button']:hover, form input[type='submit']:hover{
     cursor: pointer;
     font-family: "Playfair Display", serif;
     border-radius: 10px;
+    transition: .1s ease-in-out;
+}
+
+.edit-btn:hover{
+    background-color: white;
+    color: black;
 }
